--- a/gui/listas/listaAfiliados.ui
+++ b/gui/listas/listaAfiliados.ui
@@ -430,7 +430,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <layout class="QGridLayout" name="gridLayout_2" rowstretch="5,0,90">
+    <layout class="QGridLayout" name="gridLayout_2" rowstretch="2,0,98" columnstretch="90,10">
      <item row="1" column="0" colspan="2">
       <spacer name="horizontalSpacer">
        <property name="font">
@@ -519,8 +519,8 @@ background-color:#37861D;
        </property>
        <property name="iconSize">
         <size>
-         <width>30</width>
-         <height>30</height>
+         <width>20</width>
+         <height>20</height>
         </size>
        </property>
        <property name="shortcut">
@@ -560,7 +560,7 @@ background-color:#37861D;
         <bool>false</bool>
        </property>
        <property name="placeholderText">
-        <string>Inserte el Apellido del afiliado y presione ENTER para buscar</string>
+        <string>Buscar por APELLIDO, NOMBRE, LEGAJO O DNI</string>
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
