--- a/gui/menuPrincipal.ui
+++ b/gui/menuPrincipal.ui
@@ -540,6 +540,9 @@ color: #000000;
              <height>40</height>
             </size>
            </property>
+           <property name="shortcut">
+            <string>F3</string>
+           </property>
           </widget>
          </item>
          <item row="0" column="1">
@@ -576,6 +579,9 @@ color: #000000;
              <width>30</width>
              <height>30</height>
             </size>
+           </property>
+           <property name="shortcut">
+            <string>F2</string>
            </property>
           </widget>
          </item>
@@ -787,6 +793,9 @@ color: #000000;
              <height>40</height>
             </size>
            </property>
+           <property name="shortcut">
+            <string>F1</string>
+           </property>
            <property name="autoDefault">
             <bool>false</bool>
            </property>
@@ -834,6 +843,9 @@ color: #000000;
              <height>30</height>
             </size>
            </property>
+           <property name="shortcut">
+            <string>F4</string>
+           </property>
           </widget>
          </item>
          <item row="0" column="7">
@@ -871,6 +883,9 @@ color: #000000;
              <width>30</width>
              <height>30</height>
             </size>
+           </property>
+           <property name="shortcut">
+            <string>F6</string>
            </property>
           </widget>
          </item>
