--- a/gui/utilidades/red.ui
+++ b/gui/utilidades/red.ui
@@ -37,6 +37,9 @@
    </item>
    <item row="3" column="0">
     <widget class="QLineEdit" name="config_pass">
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
      <property name="placeholderText">
       <string>Contraseña</string>
      </property>
